kubernetes/apps/ai/toolhive/config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: ai
      conditions: ["[STATUS] == 406"]
spec:
  hostnames:
    - mcp.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
